--- a/src/app/global/footer/footer.component.scss
+++ b/src/app/global/footer/footer.component.scss
@@ -115,3 +115,42 @@ footer {
   }
   
   
+
+
+  // mobile nav
+
+
+.mobile-bottom-nav{
+	position:fixed;
+	bottom:0;
+	left:0;
+	right:0;
+	z-index:1000;
+	
+	//give nav it's own compsite layer
+	will-change:transform;
+	transform: translateZ(0);
+	
+	display:flex;	
+	
+	height:75px;
+	
+	box-shadow: 0 -2px 5px -2px #333;
+  background-color:#fff;
+  padding-top: 10px;
+	&__item{
+		flex-grow:1;
+    text-align:center;
+    font-style: normal;
+		font-size:12px;
+    border-left:1px solid #000;
+    height:50px;
+		display:flex;
+		flex-direction:column;
+		justify-content:center;
+	} 
+	&__item-content{ 
+		display:flex;
+		flex-direction:column;		
+	}
+}
