--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
           </div>
 
 
-          <div class="row mx-0">
+          <div class="row mx-0" style="margin-bottom: 5rem;">
 
                 <h2 class="header">Historical Game Stats</h2>
 
