--- a/src/app/secure/profile/profile.component.scss
+++ b/src/app/secure/profile/profile.component.scss
@@ -46,6 +46,7 @@ p.font-large{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 5rem;
 }
     .view-account{
     background:#FFFFFF;
