--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -67,7 +67,7 @@
                     <a class="nav-link" id="secure_nav_currentgame" [routerLink]="['/secure/startGame']">Manage
                         Games</a>
                 </li>
-                <li *ngIf=" isField" class="nav-item">
+                <li *ngIf="isField" class="nav-item">
                     <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/manageGame']">Configure Games</a>
                 </li>
                 <li class="nav-item">
@@ -107,26 +107,29 @@
 
 </nav>
 <nav *ngIf="appSvc.isMobile">
-    <i class="fa fa-arrow-right" (click)="toggleSideMenu()" aria-hidden="true"></i>
+    <i class="fa fa-bars cust_floater" (click)="toggleSideMenu()" aria-hidden="true"></i>
     <div id='wrapper' *ngIf="openSideMenu">
 
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav"> 
-                <li>
+                <li *ngIf="!isSecure">
+                    <a (click)="toggleSideMenu()" [routerLink]="['/auth/sign-in']">Sign In</a>
+                </li>
+                <li *ngIf="isSecure">
                     <a (click)="toggleSideMenu()" [routerLink]="['/secure/past-games']">Past Games</a>
                 </li>
-                <li>
+                <li *ngIf="isSecure">
                     <a (click)="toggleSideMenu()" [routerLink]="['/non-secure/leader-board']">Leaderboard</a>
                 </li>
-                <li class="sidebar-brand">
+                <li *ngIf="isField && isSecure" class="sidebar-brand">
                     <a>
                         Field Management
                     </a>
                 </li>
-                <li>
+                <li *ngIf="isField &&  isSecure">
                     <a (click)="toggleSideMenu()" [routerLink]="['/secure/manageGame']">Configure Games</a>
                 </li>
-                <li>
+                <li *ngIf="isField &&  isSecure">
                     <a (click)="toggleSideMenu()" [routerLink]="['/secure/startGame']">Manage Games</a>
                 </li>
                 <li class="sidebar-brand">
@@ -139,15 +142,16 @@
                 </li>
                 <li>
                     <a (click)="toggleSideMenu()" [routerLink]="['/non-secure/how-to-use']">How it works</a>
-                </li>
-                <li>
+                </li> 
                 <li>
                     <a (click)="toggleSideMenu()" [routerLink]="['/non-secure/contact-us']">Conact Us</a>
                 </li>
                 <li>
                     <a (click)="toggleSideMenu()" [routerLink]="['/non-secure/privacy-policy']">Privacy Policy</a>
                 </li>
-
+                <li *ngIf="isSecure">
+                    <a (click)="signOut()">Sign out</a>
+                </li>
             </ul>
         </div>
     </div>
