--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -90,7 +90,10 @@
     
     <div *ngIf="isField &&  isSecure" [routerLink]="['/secure/startGame']" routerLinkActive="active-link"  class="mobile-bottom-nav__item">
       <div class="mobile-bottom-nav__item-content">
-        <i class="material-icons">Manage Game</i> 
+        <i class="fa fa-cog" aria-hidden="true"></i>
+        <i><b>
+          Manage Game
+        </b></i>  
       </div>		
     </div>
  
