styleing the capasitor changes

--- a/src/app/auth/sign-in/sign-in.component.scss
+++ b/src/app/auth/sign-in/sign-in.component.scss
@@ -1,5 +1,8 @@
 @import "../../../assets/libs/font-awesome-4.7.0/scss/font-awesome.scss";
 
+.row{
+    margin:0px !important;
+}
 .social-button-container {
     width: 100%;
     text-align: center;
