--- a/src/app/auth/sign-up/sign-up.component.scss
+++ b/src/app/auth/sign-up/sign-up.component.scss
@@ -2,6 +2,9 @@
 @import "../../../assets/libs/font-awesome-4.7.0/scss/font-awesome.scss";
 
 
+.row{
+    margin:0px !important;
+}
 .btn-facebook {
     color: #ffffff !important;
     background-color: #3b5998;
