--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -1,4 +1,4 @@
-<div class="d-grid col-6 mx-auto my-2">
+<div class="d-grid col-6 mx-auto ">
 
     <div *ngIf="selectedMapID"
           class="btn btn-secondary btn-block"
