--- a/src/app/secure/manage-game/manage-game.component.scss
+++ b/src/app/secure/manage-game/manage-game.component.scss
@@ -1,7 +1,9 @@
 body{margin-top:20px;
     background-color: #f7f7fc;
     }
-    
+    .container{
+        padding-left: 0px;
+    }
     .timeline {
         list-style-type: none;
         position: relative
