--- a/src/app/secure/game-history/game-history.component.html
+++ b/src/app/secure/game-history/game-history.component.html
@@ -54,7 +54,7 @@
 
     <div class="d-grid gap-2 col-6 mx-auto">
 
-      <button *ngIf="selectedGame?.id && fieldProfile.id && fieldProfile.id == selectedMode?.fieldProfileID"
+      <button *ngIf="selectedGame?.id && fieldProfile?.id && fieldProfile?.id == selectedMode?.fieldProfileID"
            class="btn btn-danger btn-block"
            [disabled]="!selectedGame?.id"
            (click)="deleteGame()"> DELETE </button>
