--- a/src/app/auth/sign-in/sign-in.component.scss
+++ b/src/app/auth/sign-in/sign-in.component.scss
@@ -66,8 +66,7 @@
     background: #223b04;//#786546-223b04-182b02
 }
 .custom_skirmesh{
-    background-image: url('../../../assets/images/soldierB.jpg');
-    min-height: 500px;
+    background-color: #2b1f07;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
