--- a/src/app/non-secure/leaderboard/leaderboard.component.scss
+++ b/src/app/non-secure/leaderboard/leaderboard.component.scss
@@ -17,4 +17,9 @@
 
 .bg-bronze {
     background-color: #A77044;
+} 
+.container {
+    background-color: #ccba87;
+
+    box-shadow: 5px 5px 50px #ccba87;
 }
