--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,18 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .btn:active {
     transform: scale(0.95);
 } 
+
+body {
+
+    background-color: #2b1f07;
+    margin: 0;
+    padding: 0;
+     min-height: 100%; /* real browsers */ /* needed for container min-height */
+  }
+  div.main_content {
+
+    background-color: #2b1f07;
+    position: relative; /* needed for footer positioning*/
+    height: auto !important; /* real browsers */
+    min-height: 100vh; /* real browsers */
+  }
