--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,4 +1,5 @@
-
-<app-header></app-header> 
-<router-outlet></router-outlet>
+<app-header></app-header>
+<div class="main_content"> 
+    <router-outlet></router-outlet>
+</div> 
 <app-footer></app-footer>
