--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="!appSvc.isMobile" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav *ngIf="!appSvc.isMobile" class="navbar rounded-2 navbar-expand-lg navbar-light bg-light">
 
     <div class="container-fluid">
 
