--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -1,5 +1,9 @@
 @import "../../../assets/libs/font-awesome-4.7.0/scss/font-awesome.scss";
 
+
+.navbar{
+  background:linear-gradient(59deg, #786546, #142401)
+}
 .cust_floater{
   padding-left: 5px; 
   opacity: 1.0;
