--- a/src/app/global/device-list/device-list.component.scss
+++ b/src/app/global/device-list/device-list.component.scss
@@ -1,6 +1,10 @@
 .form-group{
     margin-bottom: 2px;
 }
+
+.cust_bg{
+    background-color:#928b56;
+}
 .card-body{
     padding: 10px;
     text-align: left;
