--- a/src/app/non-secure/home/home.component.scss
+++ b/src/app/non-secure/home/home.component.scss
@@ -14,7 +14,7 @@ img.carousel-image {
 
 slide div p, slide div h3{
     color: #000000;
-    background-color: rgb(255,255,255,0.5);
+    background-color:#ccba87;
     border-radius: 0.2rem;
 }
 
