--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -60,7 +60,7 @@
 
 
         <div class="row px-0" [@collapse]="!gameBoardActive">
-            <div class="col-lg-12"><h1 class="text-center pt-3"><span *ngIf="gameData?.id">Game #{{gameData.id}}: </span> {{selectedGameMode?.description}}</h1></div>
+            <div class="col-lg-12"><h1 class="text-center pt-3 "><span *ngIf="gameData?.id">Game #{{gameData.id}}: </span> {{selectedGameMode?.description}}</h1></div>
 
             <div class="col-lg-12">
                 <div class="text-center pt-3">
@@ -90,7 +90,7 @@
 
                     </div>
 
-                    <div class="row px-0 justify-content-center">
+                    <div class="row px-0 justify-content-center cust_bg">
 
                         <div *ngIf="gameBoardActive" class="col-xs">
 
