--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,12 @@ body {
     height: auto !important; /* real browsers */
     min-height: 100vh; /* real browsers */
   }
+  
+  .card-header {
+      background-color: #72716c !important;
+      }
+  
+  .card-body{
+      background-color:#928b56;
+  
+  }
