--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -14,7 +14,7 @@
 
 <div class="modal-content mb-2">
 
-    <div class="row px-0 py-2 mx-0 justify-content-center">
+    <div class="row px-0 py-2 mx-0 justify-content-center cust_bg">
 
         <div *ngFor="let device of devices; let i = index" class="card user-card">
 
