--- a/src/app/non-secure/liveGames/liveGames.component.html
+++ b/src/app/non-secure/liveGames/liveGames.component.html
@@ -1,50 +1,50 @@
-<div class="container-fluid">
+<div class="">
 
-        <div *ngIf="!gameID" class="row justify-content-center">
+    <div *ngIf="!gameID" class="parent_container row justify-content-center">
 
-                <div *ngIf="!gameCardData.length" class="alert alert-info fade show mt-2" role="alert" align="center">
-                    <h5 align="center">You just missed an awesome live game.</h5>
-                    Don't worry - games pop up all the time. Check back later,
-                    <div class="row">
-                        <div class="col"><hr></div>
-                        <div class="col-auto">or</div>
-                        <div class="col"><hr></div>
-                    </div>
-                    <strong><a [routerLink]="['/auth/login']">login</a></strong> or <strong><a [routerLink]="['/auth/sign-up']">sign-up</a></strong>
-                    to view a full history of <a [routerLink]="['/secure/past-games']"><strong>past games</strong></a>.
-
+            <div *ngIf="!gameCardData.length" class="alert alert-info fade show mt-2" role="alert" align="center">
+                <h5 align="center">You just missed an awesome live game.</h5>
+                Don't worry - games pop up all the time. Check back later,
+                <div class="row">
+                    <div class="col"><hr></div>
+                    <div class="col-auto">or</div>
+                    <div class="col"><hr></div>
                 </div>
+                <strong><a [routerLink]="['/auth/login']">login</a></strong> or <strong><a [routerLink]="['/auth/sign-up']">sign-up</a></strong>
+                to view a full history of <a [routerLink]="['/secure/past-games']"><strong>past games</strong></a>.
+
+            </div>
 
 
-            <div
-                *ngFor="let gameData of gameCardData;"
-                class="card user-card col-sm-3 d-flex px-1 py-1 gx-1 gy-1"
-                (click)="selectActiveGame(gameData.id)"
-                >
+        <div
+            *ngFor="let gameData of gameCardData;"
+            class="card user-card"
+            (click)="selectActiveGame(gameData.id)"
+            >
 
-                <div class="card-header"
-                     [value]="gameData.id"
-                     >
-                     <h5 [innerHtml]="gameData.description"></h5>
-                </div>
+            <div class="card-header"
+                    [value]="gameData.id"
+                    >
+                    <h5 [innerHtml]="gameData.description"></h5>
+            </div>
 
-                <div class="card-body"
-                     [value]="gameData.id">
+            <div class="card-body"
+                    [value]="gameData.id">
 
-                    <p [innerHtml]="gameData.startTime"></p>
+                <p [innerHtml]="gameData.startTime"></p>
 
-                    <div>
-                        <app-map [mapID]="gameData.mapID" [deviceData]="gameData.devices" [gameID]="gameData.id"></app-map>
-                    </div>
-
+                <div>
+                    <app-map [mapID]="gameData.mapID" [deviceData]="gameData.devices" [gameID]="gameData.id"></app-map>
                 </div>
 
             </div>
 
         </div>
 
+    </div>
 
-    <div *ngIf="gameID">
+
+    <div *ngIf="gameID" class="parent_container row justify-content-center">
 
         <div class="container ">
 
@@ -74,7 +74,7 @@
         </div>
 
 
-        <div *ngIf="currentTab == 'map'" class="container-fluid">
+        <div *ngIf="currentTab == 'map'" class="container">
 
           <div class="row px-0">
 
@@ -114,6 +114,6 @@
 
         </div>
 
-      </div>
+    </div>
 
   </div>
