--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
 		<div class="col-md-8">
 			<div class="card-group mb-0">
 				<div class="card p-4 cust">
-					<div class="card-body">
+					<div class="">
 
 							<div class="social-button-container">
 								<!-- <div class="top-50 start-50"> -->
@@ -74,7 +74,7 @@
 					</div>
 				</div>
 				<div class="card text-black cust py-5 d-md-down-none">
-					<div class="card-body text-center">
+					<div class="text-center">
 						<div>
 							<h2>Sign up</h2>
 							<p>Are you a field and want to get started?<br/> Reach out to us
