--- a/src/app/secure/start-game/start-game.component.scss
+++ b/src/app/secure/start-game/start-game.component.scss
@@ -7,6 +7,13 @@ select {
     padding-top: 10px;
     box-shadow: 5px 5px 50px #ccba87;
 }
+.head_container{ 
+    background-color: #ccba87;  
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;  
+    box-shadow: 5px 5px 50px #ccba87;
+}
 div.main_title {
     text-align: center;
 }
