--- a/src/app/secure/dashboard/dashboard.component.scss
+++ b/src/app/secure/dashboard/dashboard.component.scss
@@ -1,4 +1,10 @@
 
+.container{
+  background-color: #ccba87;
+  width: 100%; 
+  padding-top: 10px;
+  box-shadow: 5px 5px 50px #ccba87;
+}
    
 .center-cust{
   justify-content: center;
