--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v10.0&appId=348781009877452&autoLogAppEvents=1" nonce="5pybCMhH"></script> 
 <!-- above is for loading fb -->
-<div class="mobile">
+<div id="root" >
     <router-outlet></router-outlet> 
 </div>
 
