--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -19,9 +19,8 @@ ul>li:hover {
 
 .cust_floater2{
   margin-left: 170px; 
-  opacity: 1.0;
-  position: fixed; 
-  top:0;
+  opacity: 1.0; 
+  // top:0;
   z-index: 99999;
 }
 
