left nav trigger change

--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -63,6 +63,11 @@
   </footer>
 
   <nav *ngIf="appSvc.isMobile"  class="mobile-bottom-nav">
+    <div routerLinkActive="active-link" (click)="toggleSideMenu()" class="mobile-bottom-nav__item">
+      <div class="mobile-bottom-nav__item-content">
+        <i class="fa fa-angle-double-up  fa-2x" aria-hidden="true"></i> 
+      </div>		
+    </div>
     <div *ngIf="!isSecure" [routerLink]="['/non-secure/live-games']" routerLinkActive="active-link" class="mobile-bottom-nav__item">
       <div class="mobile-bottom-nav__item-content">
         <i class="fa fa-gamepad fa-2x" aria-hidden="true"></i> 
