--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -23,3 +23,22 @@
     </slide>
   </carousel>
    
+<br>
+<div class="has-animation animation-ltr" data-delay="10">
+  <p class="bigger">Reveal Animation </p>
+</div>
+
+<br>
+<br>
+
+<div class="has-animation animation-rtl" data-delay="1000">
+  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+<br>
+<br>
+
+<br>
+<br>
+<div class="has-animation animation-rtl" data-delay="2000">
+  <img src="https://placeimg.com/640/480/nature" width="600" />
+</div>
